--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "graphql": "^16.12.0",
+    "graphql-scalars": "^1.25.0",
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
