--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "graphql": "^16.12.0",
     "graphql-scalars": "^1.25.0",
     "graphql-tag": "^2.12.6",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
